Encapsulate positions calculation logic, covered with test. Added points but no usage for now